[project]
name = "ntu-msds-sd6104"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "desbordante>=2.3.2",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "rich>=13.9.4",
    "tabulate>=0.9.0",
    "thefuzz>=0.22.1",
]
